--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Vite App to GitHub Pages
 
 on:
   push:
-    branches: [main]
+    branches: [main] # or master if that's your default branch
 
 permissions:
   contents: write
@@ -21,7 +21,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install   # safer than npm ci if no package-lock.json
 
       - name: Build project
         run: npm run build
