--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
+  "type": "module",
   "homepage": "https://meshalnayim.github.io",
   "scripts": {
     "dev": "vite",
