--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.3",
+    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "vite": "^7.1.7"
   },
   "dependencies": {
