--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "framer-motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-type-animation": "^3.2.0"
