--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Vite App to GitHub Pages
 
 on:
   push:
-    branches: [main] # or master if that's your default branch
+    branches: [main]
 
 permissions:
   contents: write
@@ -18,10 +18,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 22  # Vite requires Node 20+ or 22+
 
       - name: Install dependencies
-        run: npm install   # safer than npm ci if no package-lock.json
+        run: npm ci
 
       - name: Build project
         run: npm run build
