--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
     "framer-motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
